# jupiter-scrapper

./: .gitignore  CHANGELOG.md  README.md  flake.nix  pyproject.toml  requirements.txt
src/: main.py
src/app/: dataclasses.py  scrapper.py
