[tool.basedpyright]
extraPaths = ["src"]

[project]
name = "jupiter-scrapper"
version = "0.1.0"
description = "A scrapper to query data of the graduation courses offered by the University of São Paulo from its Jupiter system"
authors = [
    {name = "Guilherme de Abreu"},
    {name = "Miguel Reis de Araújo", email = "reisaraujo.miguel@gmail.com"},
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "selenium (>=4.33.0,<5.0.0)",
    "types-beautifulsoup4 (>=4.12.0.20250516,<5.0.0.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
